# sel4cp

./: build_sdk.py
example/imx8mm_evk/passive_server/: Makefile
example/odroidc4/timer/: Makefile
example/orin/: Makefile
example/qemu_arm_virt/hello_world/: hello_world.system
example/qemu_arm_virt/hello_world/hello/: Makefile  hello.c
example/qemu_arm_virt/hello_world/os/: Makefile  os.c
example/qemu_arm_virt/hello_world/world/: Makefile  world.c
example/rpi4/: Makefile
home/krishnan/.pyenv/shims/: python-config
home/krishnan/.pyenv/versions/3.9.0/include/python3.9/: pyconfig.h
home/krishnan/.pyenv/versions/3.9.0/lib/pkgconfig/: python-3.9-embed.pc  python-3.9.pc
home/krishnan/.pyenv/versions/3.9.0/lib/python3.9/: _sysconfigdata__linux_x86_64-linux-gnu.py
home/krishnan/.pyenv/versions/3.9.0/lib/python3.9/config-3.9-x86_64-linux-gnu/: Makefile  python-config.py
libdummycrt/src/: thread.c
libmicrokit/include/: microkit.h
libsel4cp/: Makefile
libsel4cp/include/: sel4cp.h
libsel4cp/include/sel4cp/: sel4cp.h  thread.h
libsel4cp/src/: dbg.c  main.c
loader/: Makefile
loader/src/: loader.c
loader/src/aarch64/: loader.c
loader/src/riscv/: loader.c
monitor/src/: main.c
tool/microkit/: Cargo.toml  __main__.py  sel4.py  sysxml.py
tool/microkit/src/: loader.rs  main.rs  sdf.rs
tool/sel4coreplat/: __main__.py  sel4.py
uefi_wrapper/: Cargo.toml
uefi_wrapper/src/: main.rs
