#
# Copyright 2024, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "microkit-tool"
version = "1.4.1-dev"
edition = "2021"
rust-version = "1.73.0"

[[bin]]
name = "microkit"
path = "src/main.rs"

[dependencies]
roxmltree = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
pe-parser = "0.6.0"
goblin = { git = "https://github.com/RaitoBezarius/goblin", branch = "preps-for-ifrit-1" }
ifrit = { git = "https://github.com/RaitoBezarius/ifrit.git" }